_notes/errbyfile/Trails.java.txt
ru\metaculture\protection\Trails.java:747: error: incompatible types: 
Object cannot be converted to O00000OOO00OO
               for (O00000OOO00OO var11 : var6) {
                                          ^

  ru\metaculture\protection\Trails.java:747: error: incompatible types: 
Object cannot be converted to O00000OOO00OO
                 for (O00000OOO00OO var11 : var6) {
                                            ^
